--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body{
     box-sizing: border-box;
-    background-color: #E5E5E5;
+    background-color: #000000;
     
 }
 main{
@@ -33,7 +33,7 @@ header{
    width: 80%;
    height: 50%;
    border: none;
-   color: rgba(131, 127, 212, 0.933);
+   color: rgb(52, 72, 245);
    font-size: 1.5em;
    font-weight: bold;
    padding: 1em;
@@ -45,7 +45,7 @@ header{
 
 
 .textarea::placeholder{
-     color: rgb(151, 133, 133);
+    color: rgb(206, 190, 190);
      
     
 }
@@ -83,22 +83,16 @@ justify-content: center;
 display:inline;
 width:22em;
 height: 3.5em;        
-background-color: #0A3871;
-border:none;
+background-color:  rgb(0, 26, 255);
+border: 2px solid #ffffff;
 border-radius: 1.2em;
-margin-right: 3em;
+margin-right: 1cm;
+margin-left: 1cm;
 cursor: pointer;
-color: #fff;
+color: #ffffff;
 font-weight: bold;
 margin-bottom: 1em;
 box-shadow: 1px 2px 2px rgb(94, 91, 91);
-}
-
-.btn2{
-background-color: #E5E5E5;
-color: #0A3871;
-margin-right: 0;
-border: 2px solid #0A3871;
 }
 
 .table{
@@ -106,7 +100,7 @@ display: flex;
 flex-direction: column;
 width: 25%;
 min-height: auto;
-background-color: rgb(102, 102, 102);
+background-color: rgba(0, 26, 255, 0.556);
 justify-content: start;
 align-items: center;
 align-content: center;
@@ -188,6 +182,10 @@ footer{
     border-top: 1px solid rgb(178, 182, 178);
     text-align: center;
     height: 5px;
+}
+
+footer a{
+    color:white;
 }
 
 
